--- a/shortener/templates/shortener/success.html
+++ b/shortener/templates/shortener/success.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-    <body>
-        <p>Url: {{ object.url }}</p>
-         <p>Shortened Url : <a href='{{ object.get_short_url }}' target = '_blank'>{{ object.get_short_url }} </a></p>
-    </body>
-</html>
+{% extends "shortener/base.html" %}
+{% block content %}
+    <p>Success!</p>
+    <p>Url: {{ object.url }}</p>
+    {% if object.clickevent.count %}
+        <p>Count: {{ object.clickevent.count }}</p>
+    {% endif %}
+    <p>Shortened Url : <a href='{{ object.get_short_url }}' target = '_blank'>{{ object.get_short_url }} </a></p>
+{% endblock content %}
